@@ -1,3 +1,6 @@
+.\"
+.\" $Id: bbkeys.bb.5,v 1.3 2002/01/13 18:59:39 vanrijn Exp $
+.\"
 .TH BBKEYS.BB 5 "January 12, 2002" bbtools bbkeys.bb
 .SH NAME
 bbkeys.bb \- bbkeys style configuration file
