@@ -1,3 +1,6 @@
+.\"
+.\" $Id: bbkeysrc.5,v 1.3 2002/01/13 18:59:39 vanrijn Exp $
+.\"
 .TH BBKEYSRC 5 "January 12, 2002" bbtools bbkeysrc
 .SH NAME
 bbkeysrc \- bbkeys keymap configuration file
