@@ -19,6 +19,8 @@
 // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 // FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 // DEALINGS IN THE SOFTWARE.
+//
+// $Id: Basemenu.hh,v 1.3 2002/01/13 18:59:39 vanrijn Exp $
 
 #ifndef   __Basemenu_hh
 #define   __Basemenu_hh
