@@ -18,6 +18,8 @@
 // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING 
 // FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
 // DEALINGS IN THE SOFTWARE.
+//
+// $Id: LinkedList.hh,v 1.2 2002/01/13 18:59:39 vanrijn Exp $
   
 #ifndef   __LinkedList_hh
 #define   __LinkedList_hh
