@@ -18,6 +18,7 @@
 //
 // (See the included file COPYING / GPL-2.0)
 //
+// $Id: NETInterface.hh,v 1.2 2002/01/13 18:59:39 vanrijn Exp $
 
 #ifndef __NETINTERFACE_HH
 #define __NETINTERFACE_HH
