@@ -21,6 +21,7 @@
 //
 // (See the included file COPYING / GPL-2.0)
 //
+// $Id: bbkeys.cc,v 1.14 2002/01/13 18:59:39 vanrijn Exp $
 
 #ifdef		HAVE_CONFIG_H
 #	 include "config.h"
