@@ -16,6 +16,8 @@
 //  along with this program; if not, write to the Free Software
 //  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
+//  $Id: main.hh,v 1.4 2002/01/13 18:59:39 vanrijn Exp $
+
 #ifndef __MAIN_H
 #define __MAIN_H
 
