@@ -20,6 +20,7 @@
 //
 // (See the included file COPYING / GPL-2.0)
 //
+// $Id: resource.cc,v 1.4 2002/01/13 18:59:39 vanrijn Exp $
 
 #ifdef    HAVE_CONFIG_H
 #  include "../config.h"
