@@ -19,6 +19,8 @@
 //
 // (See the included file COPYING / GPL-2.0)
 //
+// $Id: stackmenu.cc,v 1.6 2002/01/13 18:59:39 vanrijn Exp $
+
 #include "bbkeys.hh"
 #include "LinkedList.hh"
 
