@@ -19,6 +19,8 @@
 //
 // (See the included file COPYING / GPL-2.0)
 //
+// $Id: wminterface.hh,v 1.3 2002/01/13 18:59:39 vanrijn Exp $
+
 #ifndef __WMINTERFACE_HH
 #define __WMINTERFACE_HH
 
